--- a/style.css
+++ b/style.css
@@ -1,34 +1,35 @@
-@charset "UTF-8";
-/*!
-* Start Bootstrap - Agency v6.0.5 (https://startbootstrap.com/theme/agency)
-* Copyright 2013-2021 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-agency/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap v4.6.0 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE) */
+:root{
+    --primary: #1f1e1e;
+    --secondary: #7DF9FF;
+    --tertiary: white
+}
 
+body{
+    background-color: var(--primary);
+}
 
 .container{
-  width: 100%;
+    width: 100%;
+}
+
+.container2{
+    width: 100%;
 }
 
 .container h1{
-  font-size: 40px;
-  font-family: Montserrat,sans-serif;
-  color: #7DF9FF;
+    font-size: 40px;
+    font-family: Montserrat,sans-serif;
+    color: var(--secondary);
 }
 
 .navbar {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem 1rem;
-  height: 10vh;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+    height: 10vh;
 }
 .navbar .container,
 .navbar .container-fluid,
@@ -36,221 +37,228 @@
 .navbar .container-md,
 .navbar .container-lg,
 .navbar .container-xl {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 .navbar-brand {
-  display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
-  margin-right: 1rem;
-  font-size: 1.25rem;
-  line-height: inherit;
-  white-space: nowrap;
+    display: inline-block;
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
 }
 .navbar-brand:hover, .navbar-brand:focus {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .navbar-nav {
-  display: flex;
-  flex-direction: column;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
 }
 .navbar-nav .nav-link {
-  padding-right: 0;
-  padding-left: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
 .navbar-nav .dropdown-menu {
-  position: static;
-  float: none;
+    position: static;
+    float: none;
 }
 
 .navbar-text {
-  display: inline-block;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+    display: inline-block;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 
 .navbar-collapse {
-  flex-basis: 100%;
-  flex-grow: 1;
-  align-items: center;
+    flex-basis: 100%;
+    flex-grow: 1;
+    align-items: center;
 }
 
 .navbar-toggler {
-  padding: 0.25rem 0.75rem;
-  margin-right: 10px;
-  font-size: 40px;
-  line-height: 1;
-  background-color: transparent;
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
-  color: #7DF9FF;
+    padding: 0.25rem 0.75rem;
+    margin-right: 10px;
+    font-size: 40px;
+    line-height: 1;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    color: var(--secondary);
 }
 .navbar-toggler:hover, .navbar-toggler:focus {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .navbar-toggler-icon {
-  display: inline-block;
-  width: 1.5em;
-  height: 1.5em;
-  vertical-align: middle;
-  content: "";
-  background: 50%/100% 100% no-repeat;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    content: "";
+    background: 50%/100% 100% no-repeat;
 }
 
 .navbar-nav-scroll {
-  max-height: 75vh;
-  overflow-y: auto;
+    max-height: 75vh;
+    overflow-y: auto;
 }
 
 nav h1{
-  color: var(--secondary);
-  background-color: var(--primary);
-  padding: 5px 1% 5px 3%;
-  margin: 0;
-  font-size: 30px;
-  line-height: 1;
-  font-weight: bold;
-  font-style: normal;
+    color: var(--secondary);
+    background: transparent;
+    padding: 5px 1% 5px 3%;
+    margin: 0;
+    font-size: 30px;
+    line-height: 1;
+    font-weight: bold;
+    font-style: normal;
 }
 
 #navbarResponsive{
-  display: inline-block;
-  cursor: pointer;
+    display: inline-block;
+    cursor: pointer;
 }
 
 nav a {
-  text-decoration: none;
-  padding: 5px 10px;
-  color: var(--secondary);
-  margin-right: 10px;
-  font-size: 25px;
+    text-decoration: none;
+    padding: 5px 10px;
+    color: var(--secondary);
+    margin-right: 10px;
+    font-size: 25px;
 }
 
 nav a:hover{
-  background-size: 100% 100%;
+    background-size: 100% 100%;
 }
 
 nav a:last-child{
-  margin-right: 0;
+    margin-right: 0;
 }
 
 main{
-  margin-top: 20px;
-  margin-bottom: 45px;
+    margin-top: 20px;
+    margin-bottom: 45px;
 }
 
 .hero{
-  background-size: cover;
-  background-position: center;
-  min-height: 70vh;
-  padding: 5% 5%;
-  display: flex;
-  align-items: center;
-  font-size: 50px;
+    background-size: cover;
+    background-position: center;
+    min-height: 110vh;
+    padding: 5% 5%;
+    display: flex;
+    align-items: center;
+    font-size: 50px;
+    background-image: url(./public/images/Untitled\ design.png);
 }
 
 .hero h2{
-  color: #7DF9FF;
-  font-family: Montserrat,sans-serif;
+    color: var(--tertiary);
+    font-family: Montserrat,sans-serif;
+    font-size: 60px;
 }
 
 .hero div{
-  flex: 0 0 90%;
-  background-image: url();
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  background-attachment: fixed;
-  background-position: 80%;
-  text-align: center;
+    flex: 0 0 90%;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
+    text-align: center;
 }
 
 .page-section{
-  max-width: 100%;
-  padding:  0;
-  
+    max-width: 100%;
+    padding:  0;
 }
 
-#about{
-  display: flex;
-    height: 500px;
-    margin-bottom: 10px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
+.box{
+    display: flex;
+    height: 150px;
     -webkit-box-pack: center;
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
-    background-image: url(./public/images/abstract-black-white-bokeh-background_1962-1324.jpg);
     background-position: 0 0, 50% 50%;
     background-position-x:0px, 50%;
     background-position-y: 0px, 50%;
-    background-size: 100%;
+    background-size: 150%;
     background-attachment: scroll, fixed;
 }
 
-p{
-  display: flex;
-  padding-left: 20px;
-  margin: 0;
-  font-size: 25px;
-  line-height: 1.5;
-  color: rgb(2, 2, 2);
-  text-align: center;
+.box2{
+    display: flex;
+    justify-content: flex-end;
 }
 
+p{
+    display: flex;
+    padding-left: 20px;
+    margin: 0;
+    font-size: 25px;
+    line-height: 1.5;
+    color: var(--tertiary);
+    text-align: center;
+}
+
+img{
+    height: 300px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+
 .page-section h2 {
-  margin-bottom: 10px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-  -webkit-box-pack: end;
-  justify-content: flex-end;
-  -webkit-box-align: start;
-  align-items: flex-start;
-  transition: color .4s;
-  transition-property: var(--tertiary);
-  transition-duration: 0.4s;
-  transition-timing-function: ease;
-  transition-delay: 0s;
-  font-size: 60px;
-  line-height: 66px;
-  font-weight: 900;
-  text-align: center;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-family: Montserrat,sans-serif;
-  color: #7DF9FF;
+    margin-bottom: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: start;
+    align-items: flex-start;
+    transition: color .4s;
+    transition-property: var(--tertiary);
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    font-size: 60px;
+    line-height: 66px;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-family: Montserrat,sans-serif;
+    color: var(--secondary);
 }
 
 .page-section div {
-  flex: 0 0 77%;
+    flex: 0 0 77%;
 }
 
 .page-section h3{
-  margin: 0 0 20px 0;
-  padding-left: 20px;
-  padding-right: 7px;
-  display: flex;
-  font-size: 40px;
-  color: white; 
+    margin: 0 0 20px 0;
+    padding-left: 20px;
+    padding-right: 7px;
+    display: flex;
+    font-size: 40px;
+    color: var(--tertiary); 
 }
 
 .portfolio-hover h3{
-  margin-bottom: 10px;
-  margin-top: 11px;
+    margin-bottom: 10px;
+    margin-top: 11px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
@@ -268,11 +276,11 @@ p{
     letter-spacing: 1px;
     text-transform: uppercase;
     font-family: Montserrat,sans-serif;
-    color: #7DF9FF;
+    color: var(--secondary);
 }
 
 .portfolio-hover span{
-  margin-bottom: 10px;
+    margin-bottom: 10px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
@@ -291,39 +299,44 @@ p{
     letter-spacing: 1px;
     text-transform: uppercase;
     font-family: Montserrat,sans-serif;
-    color:#7DF9FF;
+    color:var(--secondary);
 }
 
 .portfolio-hover button{
-  width: auto;
-  padding: 9px 18px;
-  margin-right: 20px;
-  margin-left: 20px;
-  border: 0 transparent;
-  border-radius: 5px;
-  background-color: #00c1cc;
-  background-image: linear-gradient(135deg,#00c1cc 30%,#313131 90%);
-  -webkit-transition: opacity .2s,color .4s,background-color .4s;
-  transition: opacity .2s,color .4s,background-color .4s;
-  font-family: Montserrat,sans-serif;
-  font-size: 22px;
-  font-weight: 500;
-  text-transform: uppercase;
+    width: auto;
+    padding: 9px 18px;
+    margin-right: 20px;
+    margin-left: 20px;
+    border: 0 transparent;
+    border-radius: 5px;
+    background-color: #00c1cc;
+    background-image: linear-gradient(135deg,#00c1cc 30%,#313131 90%);
+    -webkit-transition: opacity .2s,color .4s,background-color .4s;
+    transition: opacity .2s,color .4s,background-color .4s;
+    font-family: Montserrat,sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 .page-section button:hover{
-  background-color: #7DF9FF;
-  background-image: linear-gradient(145deg,#f702b9 20%, #161616 100%);
-  color: white;
+    background-color: #7DF9FF;
+    background-image: linear-gradient(145deg,#f702b9 20%, #161616 100%);
+    color: white;
 }
 
 .page-section a{
-  text-decoration: none;
-  color: white;
+    text-decoration: none;
+    color: var(--tertiary);
 }
 
+#work{
+    background-color: var(--primary);
+}
+
+
 .surf-report{
-  display: flex;
+    display: flex;
     height: 600px;
     padding: 100px;
     margin-top: 50px;
@@ -345,7 +358,7 @@ p{
 
 
 .led-wall{
-  display: flex;
+    display: flex;
     height: 700px;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
@@ -364,27 +377,24 @@ p{
 }
 
 .auto-log{
-  display: flex;
-    height: 750px;
-    margin-bottom: 0px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
+    background-size: cover;
+    background-position: center;
+    height: 745px;
+    padding: 5% 5%;
+    display: flex;
     align-items: center;
-    background-image: url(/public/images/auto-maintenance-log.png);
+    font-size: 50px;
+    background-image: url(./public/images/auto-maintenance-log.png);
     background-position: 0 0, 50% 50%;
     background-position-x:0px, 50%;
     background-position-y: 0px, 50%;
     background-size: 100%;
-    background-attachment: scroll, fixed;
+    min-width: 100%;
 }
 
 .e720{
-  display: flex;
-    height: 700px;
+    display: flex;
+    height: 750px;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -402,7 +412,7 @@ p{
 }
 
 .run-buddy{
-  display: flex;
+    display: flex;
     height: 650px;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
@@ -421,29 +431,29 @@ p{
 }
 
 #contact{
-  width: 100%;
-  align-items: center;
-
-  margin: 0;
-  height: 200px;
+    width: 100%;
+    align-items: center;
+    margin: 0;
+    margin-top: 20px;
+    height: 200px;
 }
 
 address{
-  padding: 5px 10px;
-  font-style: normal;
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: row;
-  flex-wrap: wrap;
-  color: #fff;
+    padding: 5px 10px;
+    font-style: normal;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    color:var(--tertiary);
 }
 
 address a{
-  text-decoration: none;
-  font-style: normal;
-  font-size: 30px;
-  transition: all 0.5s ease-in;
-  margin: 10px 0 0.2rem 0.1rem;
+    text-decoration: none;
+    font-style: normal;
+    font-size: 30px;
+    transition: all 0.5s ease-in;
+    margin: 10px 0 0.2rem 0.1rem;
 }
 
 
